# rust-clean-architecture

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README  docker-compose.yml
migrations/: 2024_create_users.sql
src/: main.rs
src/application/: README  mod.rs
src/application/handlers/: auth.rs  mod.rs  protected.rs  users.rs
src/application/middleware/: README  auth.rs
src/application/routes/: README
src/domain/: README
src/domain/models/: user.rs
src/domain/repositories/: README  user_repository.rs
src/domain/services/: README
src/infrastructure/: README  error.rs  mod.rs  server.rs
src/infrastructure/auth/: jwt.rs
src/infrastructure/config/: README  app.rs  database.rs  mod.rs
src/infrastructure/db/: README
src/infrastructure/repositories/: README  user_repository.rs
src/presentation/: README
src/presentation/dto/: README
