[package]
name = "rust-clean-architecture"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["headers"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
dotenv = "0.15"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8"
jsonwebtoken = "9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
thiserror = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["limit"] }
validator = { version = "0.16", features = ["derive"] }
regex = "1.5"
lazy_static = "1.4"